ch4/nfs-dynamic-pv.yml
# chrono @ 2022-05
#
# kubectl describe pv

---

# pod
apiVersion: v1
kind: Pod
metadata:
  name: nfs-dyn-pod

spec:

  volumes:
  - name: nfs-dyn-10m-vol
    persistentVolumeClaim:
      claimName: nfs-dyn-10m-pvc

  containers:
    - name: nfs-dyn-test
      image: nginx:alpine
      ports:
      - containerPort: 80

      volumeMounts:
        - name: nfs-dyn-10m-vol
          mountPath: /tmp

---
