ch4/nfs-static-pv.yml
# chrono @ 2022-05
#
# https://kubernetes.io/zh/docs/concepts/storage/persistent-volumes/
#
#
# kubectl exec -it nfs-1g-pod -- sh
# echo aaa > /tmp/a.txt

---

# pod
apiVersion: v1
kind: Pod
metadata:
  name: nfs-static-pod

spec:

  volumes:
  - name: nfs-pvc-vol
    persistentVolumeClaim:
      claimName: nfs-static-pvc

  containers:
    - name: nfs-pvc-test
      image: nginx:alpine
      ports:
      - containerPort: 80

      volumeMounts:
        - name: nfs-pvc-vol
          mountPath: /tmp

---
