ch4/redis-deploy.yml
# chrono @ 2022-06
#
# kubectl describe pv

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-dep

spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-dep

  template:
    metadata:
      labels:
        app: redis-dep
    spec:
      volumes:
      - name: redis-50m-vol
        persistentVolumeClaim:
          claimName: redis-50m-pvc

      containers:
      - image: redis:5-alpine
        name: redis
        ports:
        - containerPort: 6379

        volumeMounts:
          - name: redis-50m-vol
            mountPath: /data

---
